
*** HYBRID CHANGELOG
*** Newest entries at top
	
version hybrid-6-b44    30-Jan-1999
* (s_bsd.c) fixed a botch with rr = 0 causing bizarre behaviour under solaris
  (ping time outs etc.) due to a mis-cut and paste from the select code
* (s_bsd.c) redid read_packet() to use msg_ready again
* (s_bsd.c) removed unnecessary default_read_set default_write_set, that was a
  remnant from a failed experiment with pre-set up fd set's, it was
  just slowing down the code for no reason.
* (s_misc.c) redid get_client_name() slightly to be consistent,
  idented names should not have ~ non-idented names should have ~
  lets not be inconsitent with (+) prefixes for idented names
-Dianora
* changed example.conf to remind people to have their virtual address in
  the M: line for outbound connects
* fixed the STATS_NOTICE invalid directive.  made it #define by default.
-FlashMan
	
version hybrid-6-b43    24-Jan-1999
* reworked io_loop dropping CPU load significantly, this is still something 
  that needs to be looked at.
* allow stats p even if LTRACE is defined, its habit for users even if
  it is redundant.
* I liked WINTRHAWK RPL_TRACESERVER report, so thats now the default.
* Added a test in DEBUGMODE to ensure fd == 2 was never read. This
  won't happen with select() read, but can if read_messages is
  called directly. Might as well be paranoid about it now. This one
  caused ircd to abort when compiled with DEBUGMODE in b42
-Dianora
	
version hybrid-6-b42    24-Jan-1999
* removed [IP] being sent in CONNECT in connect burst
* removed [IP] if seen in m_links from prying eyes of users
-Dianora
	
version hybrid-6-b41    23-Jan-1999
* removed USERNAMES_IN_TRACE default is always on now
* get_client_name() will default to sptr->username if sptr->user->username
  is null
* made config.h/config.h.dist consistent again, went back to stock defaults
-Dianora
	
version hybrid-6-b40    21-Jan-1999
* redid m_invite for better sanity testing, you can no longer